chore: Add support for running tau-bench in notebook

--- a/dev/tau-bench/run.ipynb
+++ b/dev/tau-bench/run.ipynb
@@ -42,6 +42,7 @@
     "from tau_bench.types import TauBenchPolicyConfig, TauBenchTrainingConfig\n",
     "from run_rl import train\n",
     "from run import RunConfig\n",
+    "import torch\n",
     "\n",
     "load_dotenv()\n",
     "\n",
@@ -64,12 +65,21 @@
     "        run_config=RunConfig(\n",
     "            model_provider=\"hosted_vllm\",\n",
     "            user_model_provider=\"openai\",\n",
+    "            model=\"001\",\n",
     "            user_model=\"gpt-4o\",\n",
     "            agent_strategy=\"tool-calling-rl\",\n",
     "            temperature=1.0,\n",
     "            task_split=\"test\",\n",
     "            log_dir=\"rl_results\",\n",
     "            skip_eval=True,\n",
+    "        ),\n",
+    "    ),\n",
+    "    _internal_config=art.dev.InternalModelConfig(\n",
+    "        engine_args=art.dev.EngineArgs(\n",
+    "            tensor_parallel_size=torch.cuda.device_count(), gpu_memory_utilization=0.75\n",
+    "        ),\n",
+    "        torchtune_args=art.dev.TorchtuneArgs(\n",
+    "            model=\"qwen2_5_14b_instruct\", model_type=\"QWEN2\", async_weight_syncing=True\n",
     "        ),\n",
     "    ),\n",
     ")\n",
@@ -93,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
