--- a/docs/tutorials/summarizer.mdx
+++ b/docs/tutorials/summarizer.mdx
@@ -47,7 +47,7 @@ In a new `.env` file at the root of the repository, set the following optional e
 - `OPENPIPE_API_KEY` - Enables chat completion logging to OpenPipe.
 - `OPENAI_API_KEY` - Will be necessary for later comparison benchmarks, but not used for training.
 
-To enable model and logging backup to S3, you'll also need to provide AWS credentials. These are necessary for generating the benchmarks found in the `benchmarks` directory, but not for training itself. If you don't already have AWS credentials with create/read/write permissions for s3 buckets, follow the instructions [here](CONFIGURING_AWS.md).
+To enable model and logging backup to S3, you'll also need to provide AWS credentials. These are necessary for generating the benchmarks found in the `benchmarks` directory, but not for training itself. If you don't already have AWS credentials with create/read/write permissions for s3 buckets, follow the instructions [here](https://github.com/OpenPipe/Summary-RL/blob/main/CONFIGURING_AWS.md).
 
 - `AWS_ACCESS_KEY_ID` - Your AWS access key ID, which should have create/read/write permissions for s3 buckets.
 - `AWS_SECRET_ACCESS_KEY` - Your matching secret access key.
@@ -118,7 +118,7 @@ Once the benchmark generation script has finished running, you can view the resu
   width="500"
 />
 
-_The percentage of questions that each model's summary allowed Gemini 2.5 Flash to answer correctly at each training step. By step 5 of this training run, the trained model outperforms every other model._
+_The percentage of questions that each model's summary allowed Gemini 2.5 Flash to answer correctly at each training step. By step 40 of this training run, the trained model outperforms every other model._
 
 <img
   src="https://github.com/OpenPipe/Summary-RL/raw/main/assets/benchmarks/summarize/percentage-comparison.svg"
@@ -126,4 +126,4 @@ _The percentage of questions that each model's summary allowed Gemini 2.5 Flash 
   width="500"
 />
 
-_A side-by-side comparison of the percentage of questions that each model's summary allowed Gemini 2.5 Flash to answer correctly. The trained model began with a percentage of 12%, but by the final step, it was able to generate summaries that allowed Gemini 2.5 Flash to answer 24% of the questions correctly._
+_A side-by-side comparison of the percentage of questions that each model's summary allowed Gemini 2.5 Flash to answer correctly. The trained model began with a percentage of 37%, but by the final step, it was able to generate summaries that allowed Gemini 2.5 Flash to answer 70% of the questions correctly._
