--- a/docs/getting-started/about.mdx
+++ b/docs/getting-started/about.mdx
@@ -4,16 +4,12 @@ description: "Train your own multi-turn agents with **ART**, an open-source fram
 icon: "house"
 ---
 
-**ART** (Agent Reinforcement Trainer) is an open-source training framework for teaching agentic LLMs to improve **performance** and **reliability** through **experience**. ART provides a convenient wrapper around reinforcement learning techniques like **GRPO** (Group Relative Policy Optimization) to dramatically improve model performance while minimizing training costs.
+**ART** (Agent Reinforcement Trainer) is an open-source training framework for teaching agentic LLMs to improve **performance and reliability** through **experience**. ART provides a convenient wrapper around reinforcement learning techniques like **GRPO** (Group Relative Policy Optimization) to dramatically improve model performance while minimizing training costs.
 
-Our docs will guide you through the process of training your own agents to operate more **reliably** and **efficiently**.
+Our docs will guide you through the process of training your own agents to operate more **reliably and efficiently**.
 
-<div style={{ display: "flex", gap: "1rem", justifyContent: "space-between" }}>
-  <div
-    style={{
-      width: "50%",
-    }}
-  >
+<div className="cards-container">
+  <div className="card-wrapper">
     <Card
       title="Quick Start"
       icon="forward"
@@ -22,11 +18,7 @@ Our docs will guide you through the process of training your own agents to opera
       arrow={true}
     ></Card>
   </div>
-  <div
-    style={{
-      width: "50%",
-    }}
-  >
+  <div className="card-wrapper">
     <Card
       title="Notebooks"
       icon="book"
@@ -36,25 +28,17 @@ Our docs will guide you through the process of training your own agents to opera
     ></Card>
   </div>
 </div>
-<div style={{ display: "flex", gap: "1rem", justifyContent: "space-between" }}>
-  <div
-    style={{
-      width: "50%",
-    }}
-  >
+<div className="cards-container">
+  <div className="card-wrapper">
     <Card
       title="Supported Models"
       icon="robot"
-      href="/getting-started/supported-models"
+      href="/resources/models"
       horizontal={true}
       arrow={true}
     ></Card>
   </div>
-  <div
-    style={{
-      width: "50%",
-    }}
-  >
+  <div className="card-wrapper">
     <Card
       title="FAQ"
       icon="block-question"
