--- a/docs/getting-started/installation-setup.mdx
+++ b/docs/getting-started/installation-setup.mdx
@@ -29,8 +29,9 @@ from art.local.backend import LocalBackend
 backend = LocalBackend()
 
 model = TrainableModel(
-    model_name="deepseek-r1-distill-qwen-32b",
-    model_type="deepseek",
+    name="agent-001",
+    project="my-agentic-task",
+    base_model="Qwen/Qwen2.5-14B-Instruct",
 )
 
 await model.register(backend)
@@ -46,14 +47,46 @@ The ART client can also be run locally and connected to a remote server, which A
 from art import TrainableModel, gather_trajectory_groups
 from art.skypilot.backend import SkyPilotBackend
 
-backend = SkyPilotBackend()
+backend = await SkyPilotBackend.initialize_cluster(
+    cluster_name="my-cluster",
+    gpu="H100"
+)
 
 model = TrainableModel(
-    model_name="deepseek-r1-distill-qwen-32b",
-    model_type="deepseek",
+    name="agent-001",
+    project="my-agentic-task",
+    base_model="Qwen/Qwen2.5-14B-Instruct",
 )
 
 await model.register(backend)
 
 ... the rest of your code ...
 ```
+
+To learn more about the ART client and server, see the docs below.
+
+<div className="cards-container">
+  <div className="card-wrapper">
+    <Card
+      title="ART Client"
+      icon="laptop-code"
+      href="/fundamentals/art-client"
+      horizontal={true}
+      arrow={true}
+    >
+      The client is responsible for interfacing between your code and the ART
+      backend.
+    </Card>
+  </div>
+  <div className="card-wrapper">
+    <Card
+      title="ART Backend"
+      icon="server"
+      href="/fundamentals/art-backend"
+      horizontal={true}
+      arrow={true}
+    >
+      The backend is responsible for generating tokens and training your models.
+    </Card>
+  </div>
+</div>
