--- a/docs/getting-started/quick-start.mdx
+++ b/docs/getting-started/quick-start.mdx
@@ -42,6 +42,6 @@ Due to a quirk in the default Google Colab settings, you'll have restart the run
 
 ## Step 3: Run the notebook
 
-From here on out, you can follow the instructions in the notebook! While training is occuring, remember to track your progress in [Weights and Biases](https://wandb.ai) and [OpenPipe](https://app.openpipe.ai).
+From here on out, you can follow the instructions in the notebook! While training is occuring, remember to track your progress in [Weights & Biases](https://wandb.ai) and [OpenPipe](https://app.openpipe.ai).
 
 If you have questions along the way, please ask in the [Discord](https://discord.gg/zbBHRUpwf4). Happy training!
