--- a/examples/2048/2048.ipynb
+++ b/examples/2048/2048.ipynb
@@ -128,7 +128,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!uv pip install openpipe-art==0.3.11.post1 accelerate==1.7.0 weave --prerelease allow --no-cache-dir"
+    "!uv pip install openpipe-art==0.3.11.post1 accelerate==1.7.0 setproctitle weave --prerelease allow --no-cache-dir"
    ]
   },
   {
