feat: Reproduce Temporal Clue w/Torchtune

--- a/examples/temporal_clue/temporal-clue-torchtune.ipynb
+++ b/examples/temporal_clue/temporal-clue-torchtune.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,12 +86,16 @@
     "model = art.TrainableModel(\n",
     "    name=\"001\",\n",
     "    project=\"temporal-clue\",\n",
-    "    base_model=\"Qwen/Qwen2.5-32B-Instruct\",\n",
+    "    base_model=\"Qwen/Qwen2.5-14B-Instruct\",\n",
     "    _internal_config={\n",
-    "        \"init_args\": {\"gpu_memory_utilization\": 0.85},\n",
+    "        \"engine_args\": {\n",
+    "            \"tensor_parallel_size\": 2,\n",
+    "            \"gpu_memory_utilization\": 0.7,\n",
+    "            \"max_num_seqs\": 512,\n",
+    "        },\n",
     "        \"torchtune_args\": {\n",
-    "            \"model\": \"qwen3_32b\",\n",
-    "            \"model_type\": \"QWEN3\",\n",
+    "            \"model\": \"qwen2_5_14b_instruct\",\n",
+    "            \"model_type\": \"QWEN2\",\n",
     "            \"async_weight_syncing\": True,\n",
     "        },\n",
     "    },\n",
@@ -99,7 +103,7 @@
     "backend = LocalBackend()\n",
     "await model.register(backend)\n",
     "\n",
-    "stride = 16\n",
+    "stride = 8\n",
     "for i in range(await model.get_step(), 1_000):\n",
     "    val_groups, train_groups = await asyncio.gather(\n",
     "        art.gather_trajectory_groups(\n",
@@ -108,6 +112,7 @@
     "                for puzzle in val_puzzles\n",
     "            ),\n",
     "            pbar_desc=\"val\",\n",
+    "            pbar_total_completion_tokens=False,\n",
     "        ),\n",
     "        art.gather_trajectory_groups(\n",
     "            (\n",
@@ -115,6 +120,7 @@
     "                for puzzle in train_puzzles[i * stride : (i + 1) * stride]\n",
     "            ),\n",
     "            pbar_desc=\"train\",\n",
+    "            pbar_total_completion_tokens=False,\n",
     "        ),\n",
     "    )\n",
     "    await model.log(val_groups)\n",
