Update 2048 code to use RULER (#228)
* Delete unused notebooks

* Simplify 2048

* Add comments to train file

* Simplify rollout function

* Update 2048 files

* Add group judge to 2048

* Record invalid moves

* Use RULER

--- a/examples/2048/display_benchmarks.ipynb
+++ b/examples/2048/display_benchmarks.ipynb
@@ -49,7 +49,7 @@
     "# await load_trajectories.bust_cache()\n",
     "df = await load_trajectories(\n",
     "    project_name=project_name,\n",
-    "    models=[\"003\", \"gpt-4o\", \"gpt-4.1\", \"gpt-4o-mini\"],\n",
+    "    models=[\"tutorial-001\", \"gpt-4o\", \"gpt-4.1\", \"gpt-4o-mini\"],\n",
     ")\n",
     "\n",
     "benchmarks_dir = f\"{get_repo_root_path()}/assets/benchmarks/{project_name}\"\n",
@@ -78,7 +78,7 @@
     "    df,\n",
     "    \"win\",\n",
     "    models=[\n",
-    "        BenchmarkModelKey(\"003\", \"agent-003\", \"train\"),\n",
+    "        BenchmarkModelKey(\"tutorial-001\", \"tutorial-001\", \"train\"),\n",
     "        BenchmarkModelKey(\"gpt-4o\", \"GPT-4o\"),\n",
     "        BenchmarkModelKey(\"gpt-4.1\", \"GPT-4.1\"),\n",
     "        BenchmarkModelKey(\"gpt-4o-mini\", \"GPT-4o-mini\"),\n",
@@ -110,7 +110,7 @@
     "    df,\n",
     "    metric_name=\"win\",\n",
     "    models=[\n",
-    "        BenchmarkModelKey(\"003\", \"agent-003\", \"train\"),\n",
+    "        BenchmarkModelKey(\"tutorial-001\", \"tutorial-001\", \"train\"),\n",
     "        BenchmarkModelKey(\"gpt-4o\", \"GPT-4o\"),\n",
     "        BenchmarkModelKey(\"gpt-4.1\", \"GPT-4.1\"),\n",
     "        BenchmarkModelKey(\"gpt-4o-mini\", \"GPT-4o-mini\"),\n",
