--- a/examples/2048/2048-ruler.ipynb
+++ b/examples/2048/2048-ruler.ipynb
@@ -114,7 +114,9 @@
     "if OPENAI_API_KEY:\n",
     "    os.environ[\"OPENAI_API_KEY\"] = OPENAI_API_KEY\n",
     "else:\n",
-    "    raise ValueError(\"OPENAI_API_KEY is required for RULER functionality when using openai/o3.\")\n",
+    "    raise ValueError(\n",
+    "        \"OPENAI_API_KEY is required for RULER functionality when using openai/o3.\"\n",
+    "    )\n",
     "\n",
     "# Optional\n",
     "WANDB_API_KEY = \"\"\n",
@@ -606,7 +608,7 @@
     "    reward=0,\n",
     ")\n",
     "\n",
-    "sample_group = art.TrajectoryGroup( \n",
+    "sample_group = art.TrajectoryGroup(\n",
     "    trajectories=[\n",
     "        good_trajectory,\n",
     "        mediocre_trajectory,\n",
@@ -617,8 +619,10 @@
     "judged_group = await ruler_score_group(sample_group, \"openai/o3\", debug=True)\n",
     "assert judged_group is not None\n",
     "\n",
-    " # Display rankings\n",
-    "sorted_trajectories = sorted(judged_group.trajectories, key=lambda t: t.reward, reverse=True)\n",
+    "# Display rankings\n",
+    "sorted_trajectories = sorted(\n",
+    "    judged_group.trajectories, key=lambda t: t.reward, reverse=True\n",
+    ")\n",
     "for rank, traj in enumerate(sorted_trajectories, 1):\n",
     "    messages = traj.messages()\n",
     "    print(f\"\\nRank {rank}: Score {traj.reward:.3f}\")\n",
