--- a/dev/yes-no-maybe.ipynb
+++ b/dev/yes-no-maybe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +46,10 @@
     "    name=\"001\",\n",
     "    project=\"yes-no-maybe\",\n",
     "    base_model=\"Qwen/Qwen2.5-7B-Instruct\",\n",
+    "    _internal_config=art.dev.InternalModelConfig(\n",
+    "        _decouple_vllm_and_unsloth=True,\n",
+    "        engine_args=art.dev.EngineArgs(gpu_memory_utilization=0.7),\n",
+    "    ),\n",
     ")\n",
     "await model.register(backend)\n",
     "\n",
