--- a/dev/yes-no-maybe.ipynb
+++ b/dev/yes-no-maybe.ipynb
@@ -111,6 +111,9 @@
     "    await model.train(\n",
     "        train_groups,\n",
     "        config=art.TrainConfig(learning_rate=1e-4),\n",
+    "        _config=art.dev.TrainConfig(\n",
+    "            precalculate_logprobs=True,\n",
+    "        ),\n",
     "    )"
    ]
   }
