--- a/examples/auto-art.ipynb
+++ b/examples/auto-art.ipynb
@@ -487,7 +487,7 @@
         "    return response.choices[0].message.content.strip()\n",
         "\n",
         "SYSTEM_PROMPT = await generate_system_prompt(TASK_DESCRIPTION)\n",
-        "print(f\"Generated system prompt:\\n{SYSTEM_PROMPT}\")\n",
+        "print(f\"Generated system prompt:\\n\\n{SYSTEM_PROMPT}\")\n",
         "\n",
         "class TaskInput(BaseModel):\n",
         "    step: int\n",
@@ -534,23 +534,24 @@
         "\n",
         "    return traj\n",
         "\n",
-        "print(\"Rollout function defined!\")"
+        "print(\"\\nRollout function defined!\")"
       ],
       "metadata": {
         "id": "rD__xfx_93WT",
-        "outputId": "088d778e-ff1e-4b79-881b-7fea9f0086b7",
+        "outputId": "eed32e68-8d73-46a4-eb15-b3935c9a495b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "cellView": "form"
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Generated system prompt:\n",
+            "\n",
             "Convert informal bug reports into structured JIRA-style tickets with the following sections:  \n",
             "- SUMMARY: Provide a concise, one-line title.  \n",
             "- PRIORITY: Assign Critical, High, Medium, or Low based on the described impact.  \n",
@@ -559,6 +560,7 @@
             "- ACTUAL RESULT: Describe what actually happens.  \n",
             "- ENVIRONMENT: Extract and summarize any relevant system or version information.  \n",
             "Use only the information provided in the report. If any section is missing information, write \"Not specified.\"\n",
+            "\n",
             "Rollout function defined!\n"
           ]
         }
