--- a/examples/auto-art.ipynb
+++ b/examples/auto-art.ipynb
@@ -872,7 +872,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0491f821-26e2-4e3a-a3b4-f36f81add19f"
+        "outputId": "0491f821-26e2-4e3a-a3b4-f36f81add19f",
+        "cellView": "form"
       },
       "outputs": [
         {
@@ -1016,6 +1017,8 @@
         }
       ],
       "source": [
+        "#@title Final Test Code\n",
+        "\n",
         "# Generate test inputs\n",
         "print(\"Generating test inputs...\")\n",
         "test_inputs = await generate_training_inputs(TASK_DESCRIPTION, num_examples=NUM_TEST_INPUTS)\n",
