--- a/examples/auto-art.ipynb
+++ b/examples/auto-art.ipynb
@@ -104,10 +104,25 @@
     {
       "cell_type": "code",
       "source": [
+        "# Required\n",
+        "OPENAI_API_KEY = \"\"\n",
+        "\n",
+        "# Optional\n",
+        "WANDB_API_KEY = \"\""
+      ],
+      "metadata": {
+        "id": "LY2a6IuZKeFn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Enviornment Variables Validation Code\n",
         "import os\n",
         "\n",
         "# Required\n",
-        "OPENAI_API_KEY = \"\"\n",
         "if OPENAI_API_KEY:\n",
         "    os.environ[\"OPENAI_API_KEY\"] = OPENAI_API_KEY\n",
         "else:\n",
@@ -116,29 +131,17 @@
         "    )\n",
         "\n",
         "# Optional\n",
-        "WANDB_API_KEY = \"\"\n",
         "if WANDB_API_KEY:\n",
         "    os.environ[\"WANDB_API_KEY\"] = WANDB_API_KEY\n",
         "else:\n",
-        "    print(\"WANDB_API_KEY is not set. We'll skip logging metrics to Weights & Biases.\")\n"
+        "    print(\"WANDB_API_KEY is not set. We'll skip logging metrics to Weights & Biases.\")"
       ],
       "metadata": {
-        "id": "FgZefVBd84nW",
-        "outputId": "1b68a870-b054-43a5-f889-adbfab58ccea",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "cellView": "form",
+        "id": "FQ2BfxTUKvgw"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "WANDB_API_KEY is not set. We'll skip logging metrics to Weights & Biases.\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -213,7 +216,7 @@
         "id": "so6r1_OG9en3",
         "outputId": "b4a90ce5-da6c-4a98-b1fb-0f9138fd4fe9"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -418,7 +421,7 @@
         },
         "cellView": "form"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -544,7 +547,7 @@
         },
         "cellView": "form"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
