--- a/examples/art-e/art-e.ipynb
+++ b/examples/art-e/art-e.ipynb
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!uv pip install openpipe-art==0.3.11.post2 langchain-core tenacity datasets --prerelease allow --no-cache-dir"
+    "!uv pip install openpipe-art==0.3.11.post2 langchain-core tenacity datasets \"gql<4\" --prerelease allow --no-cache-dir"
    ]
   },
   {
