--- a/examples/temporal_clue/temporal-clue.ipynb
+++ b/examples/temporal_clue/temporal-clue.ipynb
@@ -40,7 +40,7 @@
             "outputs": [],
             "source": [
                 "%%capture\n",
-                "!uv pip install openpipe-art==0.3.11.post2 --prerelease allow --no-cache-dir"
+                "!uv pip install openpipe-art==0.3.11.post2 \"gql<4\" --prerelease allow --no-cache-dir"
             ]
         },
         {
